--- a/Changes
+++ b/Changes
@@ -32,3 +32,101 @@ Revision history for Perl extension Geo::Google.
 	    query process, added new error messages, and re-wrote 
 	    some existing error messages for clarity
 	- Added detailed test failure reporting to t/Geo-Google.t
+20070226:0213:MAT 
+	Partial fix of a bug in extraction and correlation of 
+	driving directions steps.
+20070227:0516:MAT 
+	-Completed fix of Path segments bug reported by
+		Thomas Delaet and Pieter-Jan Speelmans
+	-Added code to automatically accept suggested changes
+		to google maps queries in the Geo::Google->path() 
+		function.
+	-Adjusted path object to include start, stop and all 
+		waypoints as segments
+	-Revised test script to reflect new path data structure
+20070301:0458:MAT
+	-Cleaned up suggestion acceptor in Geo::Google->path()
+		-Based parsing on a style tag instead of English text 
+	-Replaced parsing for html segment descriptions with 
+		a description constructor for waypoints only 
+20070302:1422:MAT
+	-Removed waypoint html segment description contstructor.
+		Replaced it with the official Google title of the 
+		location from from the Geo::Google::Location object
+		for the waypoint.
+20070304:1751:MAT
+	-Fixed parsing bug that caused directions with no waypoints
+		to miss all directions steps, returning only the 
+		start and stop points.
+
+		Special thanks to Pieter Agten <pi8 at pi.be>
+		for zeroing in on the problem line and sending a 
+		patch.
+	-Added 14 new tests to verify that directions with no 
+		waypoints (from: to:) parse correctly.
+20070308:0626:MAT
+	-re-tooled driving directions parsing and adjusted structure 
+		of the path object slightly to comply with Google's 
+		latest changes to the JSON data.  Added a second
+		polyline (because google switched to one polyline per 
+		subpath)
+		-Thanks to Pieter Agten for spotting this and sending
+		 in a bug report
+0.04-rc1 : 9 April 2007 : MAT
+    -Fixed broken distance and time parsing
+    -Re-wrote and added extensive commenting to the polyline decoding
+    	- now it works on 64-bit perl as well
+    -Adjusted HTML segment to polyline points synchronization loops
+     to account for the new polyline decoding algorithm
+0.04-rc2 : MAT : adjusted for slightly different point lat/longs in test script
+0.04-rc3 : MAT
+  - This version requires perl JSON module 1.11 patched with Allen Day's
+      JSON/Parser.pm patch.  Recently added JSON from Google Maps broke 
+      the JSON parser.  The Allen Day patch makes it more flexible for
+      quote handling.
+  - Adjusted the _obj2location() function because Google changed their
+      JSON data structure for locations (address lines specifically).
+0.04-rc4: MAT
+  - Rewrote _encode() for 64 bit CPU compatibility
+  - Wrote _encode_word() function used by new version of _encode()
+  - Fixed Geo::Google::Path->toXML() function (have not tested for KML file
+    compatibility).
+  - Added static unit tests for:
+    _encode_word()
+    _encode()
+    _decode_word()
+    _decode()
+    _decode() to _encode() and comparison of output against input
+  - Added a dynamic unit test that tests both _decode() and _encode() against
+    the actual Google polyline string
+  - Adjusted the correlation algorithm for HTML extracted directions segments and
+    points extracted from the polyline strings.  We now use search locations for
+    points wherever possible.
+    - To make this possible, I adjusted precision of lat/long coords for 
+      Geo::Google::Locations that are used as path search parameters.  They come
+      from Google with millionth degree precision, but polyline points only have
+      hundred-thousandth degree precision.
+    - Points to HTML correlation is spot on for point-to-point directions, but off
+      for point-to-point-to-point directions (waypoints).  Will fix this when I
+      restructure the API for Path->Subpath->Segment directions structure.
+  - Adjusted directions parsing to accommodate Google's naming convention change
+    for driving segments.  It was 'dirsegment_\d+_\d+', but now it's 
+    'panel_\d+_\d+'.
+0.04-rc5 (MAT)
+  - Modified the location() constructor method of of the Geo::Google object to
+    allow it to return Geo::Gooogle::Location objects when Google can't resolve
+    the address you provide but suggests alternate addresses that it can
+    resolve.  It returns these alternate address in the same array of
+    Geo::Google::Location objects that it normally returns.  They are ordered 
+    in the same order Google presents them.
+  - Added unit tests for handling of suggested alternate addresses in the
+    location() constructor method of the Geo::Google object.
+0.04-rc5 (MAT)
+  - Modified Makefile.PL to require JSON version 1.12 or greater (1.11 and
+    earlier don't handle mixes of ' and " as key and field delimiters)
+0.04-rc6 (MAT)
+  - Adjusted parsing to compensate for a in change Google's JSON reponse
+    structure and UTF escaping.
+  - Minor code beautification
+  - Adjusted test script to match slight changes in Google's data
+  - Test script now prints specific error messages when it fails some tests
